# school-of-expression

./: .gitignore  README.md  school-of-expression.cabal  stack.yaml
src/: Main.hs  Shape.hs
