name:              school-of-expression
version:           0.1.0
Build-Type:        Simple
cabal-version:     >= 1.10

executable school-of-expression
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  default-extensions:
                    NoImplicitPrelude
  ghc-options:      -Wall
  build-depends:    base
